[Sync] Register PROXY_TABS with ModelTypeRegistry to include it in enabled types

The issue is that PROXY_TABS type doesn't represent a type that gets synced
with the server, no entries are committed by the client or downloaded from the
server. Because of this PROXY_TABS doesn't need update handler in
ModelTypeRegistry. Unfortunately value of tabs_datatype_enabled is decided
based on the presence of PROXY_TABS in the set of enabled types.

The change I made is to register the type anyway thus including it in the set
of enabled directory types. It is not the ideal solution, but it is the
smallest, least invasive one. It limits ugliness to ProxyDataTypeController.

BUG=688045
R=skym@chromium.org

Review-Url: https://codereview.chromium.org/2684533003
Cr-Commit-Position: refs/heads/master@{#448873}

Former-commit-id: 5402cfa4cf2e6841bf3269bdfb8c3ee2bb3788cc